--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 title: My Resume
-url: 'microcerebus.github.io/dhruv'
+url: 'https://microcerebus.github.io/dhruv'
 baseurl: '/dhruv' #change it according to your repository name
 
 
